2007-10-29  Jean-David Gadina  <info@macmade.net>

	* Increased API internal version number to 4.3.
	* Added the Mootools JS framework.
	* Added TS setup and constants.
	* Added the possibility not to load the JS scripts.
	* Updated the API documentation (doc/manual.sxw).
	* Release of version 4.3 of the API.

2007-10-29  Jean-David Gadina  <info@macmade.net>

	* Increased API internal version number to 4.2.
	* Fixed a bug in the backend JS functions.
	* Updated the API documentation (doc/manual.sxw).
	* Release of version 4.2 of the API.

2007-10-16  Jean-David Gadina  <info@macmade.net>

	* Increased API internal version number to 4.1.
	* New function: newInstance. This function is used to to get an instance of a class.
	* Fixed a bug with the TYPO3 site path in the JavaScript methods.
	* Updated the API documentation (doc/manual.sxw).
	* Release of version 4.1 of the API.

2007-10-03  Jean-David Gadina  <info@macmade.net>

	* Updated the API documentation (doc/manual.sxw).
	* Release of version 4.0 of the API.

2007-09-26  Jean-David Gadina  <info@macmade.net>

	* Removed the 'displayErrors' property, which was not usefull.
	* Modified the errorMsg function. An error message and the line number have now to be passed with the method name.
	* Added error messages for each function calling the errorMsg function.
	* Fixed a bug in the function fe_linkTP_keepPIvars.
	* Increased API internal version number to 4.0.
	* Added a directory for PHP5 only classes.
	* New function: getPhp5Class. This function is used to load API classes designed exclusively for PHP5.
	* Added the tx_apimacmade_flexform PHP5 class.

2007-09-20  Jean-David Gadina  <info@macmade.net>
	
	* Increased API internal version number to 3.4.
	* New function: fe_includeLightBoxJs. This function is used to include the lightbox JavaScript in a frontend context.
	* New function: be_includeLightBoxJs. This function is used to include the lightbox JavaScript in a backend context.