@@ -35,10 +35,17 @@
 plugin.tx_apimacmade_pi1 {
     
     // JavaScript flags
-    hasPrototype     = {$plugin.tx_apimacmade_pi1.hasPrototype}
-    hasMootools      = {$plugin.tx_apimacmade_pi1.hasMootools}
-    hasScriptaculous = {$plugin.tx_apimacmade_pi1.hasScriptaculous}
-    hasLightBox      = {$plugin.tx_apimacmade_pi1.hasLightBox}
-    hasUfo           = {$plugin.tx_apimacmade_pi1.hasUfo}
-    hasSwfObject     = {$plugin.tx_apimacmade_pi1.hasSwfObject}
+    hasPrototype         = {$plugin.tx_apimacmade_pi1.hasPrototype}
+    hasMootools          = {$plugin.tx_apimacmade_pi1.hasMootools}
+    hasScriptaculous     = {$plugin.tx_apimacmade_pi1.hasScriptaculous}
+    hasLightBox          = {$plugin.tx_apimacmade_pi1.hasLightBox}
+    hasUfo               = {$plugin.tx_apimacmade_pi1.hasUfo}
+    hasSwfObject         = {$plugin.tx_apimacmade_pi1.hasSwfObject}
+    hasWebToolkit.base64 = {$plugin.tx_apimacmade_pi1.hasWebToolkit.base64}
+    hasWebToolkit.crc32  = {$plugin.tx_apimacmade_pi1.hasWebToolkit.crc32}
+    hasWebToolkit.md5    = {$plugin.tx_apimacmade_pi1.hasWebToolkit.md5}
+    hasWebToolkit.sha1   = {$plugin.tx_apimacmade_pi1.hasWebToolkit.sha1}
+    hasWebToolkit.sha256 = {$plugin.tx_apimacmade_pi1.hasWebToolkit.sha256}
+    hasWebToolkit.url    = {$plugin.tx_apimacmade_pi1.hasWebToolkit.url}
+    hasWebToolkit.utf8   = {$plugin.tx_apimacmade_pi1.hasWebToolkit.utf8}
 }
