@@ -1,3 +1,8 @@
+2007-12-10  Jean-David Gadina  <info@macmade.net>
+
+	* Increased API internal version number to 4.4.
+	* Added the WebToolKit JS scripts.
+
 2007-10-29  Jean-David Gadina  <info@macmade.net>
 
 	* Increased API internal version number to 4.3.
